--- a/resume.tex
+++ b/resume.tex
@@ -40,7 +40,7 @@
 \textbf{Privacy Manager team, Cloud+AI Group}
 \begin{itemize}
   \item Designed a command line program, Layer 7 Packet Tracer, to locate the IP address of a device that will filter packets at specific application layers.
-  \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the end-to-end front-end testing of the Privacy Review Manager project. Completed 31 test cases with ~1k lines of code.
+  \item Investigated the Protractor, Jasmine, and Selenium tools. Built a framework for the End-to-End frontend testing of the Privacy Review Manager project. Completed 31 test cases with 1k+ lines of code, covered 95%+ scenarios.
   \item Designed a more flexible, configurable, and more versatile front-end progress bar component.
 \end{itemize}
 
