--- a/resume.tex
+++ b/resume.tex
@@ -46,10 +46,11 @@
 
 \section{Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{Programming Languages:} experienced in C / C++ / C\#, comfortable with Python / Javascript / PHP.
-  \item \textbf{Computer Network:} Famillar with TCP/IP stack, basic SDN concept and configuration, developing under Linux OS.
-  \item \textbf{Front-end and Back-end devlelopment:} Angular, Laravel.
-  \item \textbf{Languages ability:} English(Fluent. TOEFL:101, GRE:319), Mandarin(Native).
+  \item \textbf{Programming Skills:} C#, .NET, TypeScript, JavaScript, TypeScript, PowerShell, C, C++, Data Structure & Algorithm. 
+  \item \textbf{Databases:} Azure Cosmos DB, Microsoft SQL Server.
+  \item \textbf{Web Technologies:} React, FluentUI, ASP.NET, Angular, Laravel, REST, HTML, CSS.
+  \item \textbf{Others:} DevOps, Git, Microsoft Azure, MSBuild, WiX(Windows Installer XML).
+  \item \textbf{Languages ability:} English(Fluent), Mandarin(Native).
 \end{itemize}
 
 \section{Education}
