--- a/resume.tex
+++ b/resume.tex
@@ -46,7 +46,7 @@
 
 \section{Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{Programming Skills:} C#, .NET, TypeScript, JavaScript, TypeScript, PowerShell, C, C++, Data Structure & Algorithm. 
+  \item \textbf{Programming Skills:} C\#, .NET, TypeScript, JavaScript, TypeScript, PowerShell, C, C++, Data Structure, Algorithm. 
   \item \textbf{Databases:} Azure Cosmos DB, Microsoft SQL Server.
   \item \textbf{Web Technologies:} React, FluentUI, ASP.NET, Angular, Laravel, REST, HTML, CSS.
   \item \textbf{Others:} DevOps, Git, Microsoft Azure, MSBuild, WiX(Windows Installer XML).
