--- a/resume.tex
+++ b/resume.tex
@@ -60,12 +60,12 @@
   \item GPA : 3.01 / 5 (81.05 / 100), Major GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
 
-line1
-line2
-line3
-line4
-line5
-line6
+line1 \\
+line2 \\
+line3 \\
+line4 \\
+line5 \\
+line6 \\
 
 %% Reference
 %\newpage
