--- a/resume.tex
+++ b/resume.tex
@@ -13,7 +13,7 @@
   \email{zhaochang206@gmail.com}\textperiodcentered\ 
   \phone{(+86) 130-0382-8195}\textperiodcentered\ 
   \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}\textperiodcentered\ 
-  \github[ZCplayground]{https://github.com/ZCplayground}\textperiodcentered\ }
+  \github[ZCplayground]{https://github.com/ZCplayground}}
   
 \section{Experience}
 \datedsubsection{\textbf{Microsoft Suzhou, Software Development Engineer}}{Mar. 2021 - Present}
@@ -46,7 +46,7 @@
 
 \section{Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{Programming Skills:} C\#, .NET, TypeScript, JavaScript, TypeScript, PowerShell, C, C++, Data Structure, Algorithm. 
+  \item \textbf{Programming Skills:} C\#, .NET, TypeScript, JavaScript, PowerShell, C, C++, Data Structure, Algorithm. 
   \item \textbf{Databases:} Azure Cosmos DB, Microsoft SQL Server.
   \item \textbf{Web Technologies:} React, FluentUI, ASP.NET, Angular, Laravel, REST, HTML, CSS.
   \item \textbf{Others:} DevOps, Git, Microsoft Azure, MSBuild, WiX(Windows Installer XML).
@@ -54,18 +54,11 @@
 \end{itemize}
 
 \section{Education}
-\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2015 - Jun. 2020}
+\datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2016 - Jun. 2020}
 \begin{itemize}
   \item \textit{Bachelor of Engineer} in Computer Science (CS)
-  \item GPA : 3.01 / 5 (81.05 / 100), Major GPA: 3.59 / 5 (85.69 / 100)
+  \item GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
-
-line1 \\
-line2 \\
-line3 \\
-line4 \\
-line5 \\
-line6 \\
 
 %% Reference
 %\newpage
