--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,9 @@
   \phone{(+86) 130-0382-8195}\textperiodcentered\ 
   \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}\textperiodcentered\ 
   \github[ZCplayground]{https://github.com/ZCplayground}}
-  
+
+Highly skilled and experienced backend developer with 7+ years of hands-on experience, specializing on webserver development and distributed systems. Seeking a challenging software engineering position. \\
+
 \section{Experience}
 \datedsubsection{\textbf{Microsoft Suzhou, Software Development Engineer}}{Mar. 2021 - Present}
 \textbf{Viva Topics Notification Feature Development}
