--- a/resume.tex
+++ b/resume.tex
@@ -15,11 +15,9 @@
   \linkedin[Chang Zhao]{https://www.linkedin.com/in/chang-zhao-chaz/}\textperiodcentered\ 
   \github[ZCplayground]{https://github.com/ZCplayground}}
 
-Highly skilled and experienced backend developer with 7+ years of hands-on experience, specializing on webserver development and distributed systems. Seeking a challenging software engineering position. \\
-
 \section{Experience}
 \datedsubsection{\textbf{Microsoft Suzhou, Software Development Engineer}}{Mar. 2021 - Present}
-\textbf{Viva Topics Notification Feature Development}
+\textbf{Viva Topics Notification System Development}
 \begin{itemize}
   \item Engaged in cross-functional collaboration with product managers, developers, and designers to implement Viva Topics Notification feature including email and Teams Bot notifications. 
   \item Implemented Azure Bot Service prototype utilizing Bot Framework, facilitating user engagement and enhancing premium plan conversion rates.
@@ -61,6 +59,9 @@ Highly skilled and experienced backend developer with 7+ years of hands-on exper
   \item \textit{Bachelor of Engineer} in Computer Science (CS)
   \item GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
+
+\section{Beyond Work}
+I am passionate about Computer Science knowledge and possess a strong willingness to self-improvement and exploration of new concepts. I derive great satisfaction from contributing to the wider community. As an example, I created Chinese subtitles for the lesson "Memory Hierarchy" in CMU's renowned Introduction to Computer Systems (ICS) video series.
 
 %% Reference
 %\newpage
