--- a/resume.tex
+++ b/resume.tex
@@ -55,8 +55,7 @@
 \section{Education}
 \datedsubsection{\textbf{Fuzhou University (FZU)}, Fuzhou, China}{Sept. 2016 - Jun. 2020}
 \begin{itemize}
-  \item \textit{Bachelor of Engineer} in Computer Science (CS)
-  \item GPA: 3.59 / 5 (85.69 / 100)
+  \item \textbf{Bachelor of Engineer} - Computer Science and Technology. GPA: 3.59 / 5 (85.69 / 100)
 \end{itemize}
 
 \section{Beyond Work}
